--- a/node2-http/public/home.html
+++ b/node2-http/public/home.html
@@ -8,12 +8,12 @@
 </head>
 <style>
     h1 {
-        margin-top: 50px;
+        margin-top: 20px;
         padding: 20px 0 0 10px;
         color: red;
     }
     p {
-        padding: 20px 0 0 10px;
+        padding-left: 10px;
         color: gray;
         font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     }
